<?xml version="1.0" encoding="utf-8"?>
<!--
    ~ Copyright 2022 The TensorFlow Authors. All Rights Reserved.
    ~
    ~ Licensed under the Apache License, Version 2.0 (the "License");
    ~ you may not use this file except in compliance with the License.
    ~ You may obtain a copy of the License at
    ~
    ~       http://www.apache.org/licenses/LICENSE-2.0
    ~
    ~ Unless required by applicable law or agreed to in writing, software
    ~ distributed under the License is distributed on an "AS IS" BASIS,
    ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    ~ See the License for the specific language governing permissions and
    ~ limitations under the License.
-->
<resources>
    <string name="app_name">Detection/Chat app</string>

    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing maxium detected results
        button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing maxium detected results
        button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing threshold of detected object
        results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing threshold of detected object
        results button</string>
    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>

    <string name="ollama_api_url">Ollama API URL</string>
    <string name="enter_the_ollama_api_url">Enter the Ollama API URL</string>
    <string name="chat_title">OllamaDroid</string>
    <string name="type_message_hint">Message</string>
    <string name="send">Send</string>
    <string name="enter">Enter</string>
    <string name="system_prompt">System Prompt</string>
    <string name="enter_system_prompt">Enter System Prompt</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="select_model">Select Model</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="select_picture">Select Picture</string>
    <string name="save">Save</string>
    <string name="go_to_chat">Go to Chat</string>
    <string name="connection_test_successful">Connection Test Successful</string>
    <string name="connection_test_failed">Connection Test Failed</string>
    <string name="chat_name">Mechanic</string>
    <string name="stop">Stop</string>
    <string name="system_prompt_key">system_prompt</string>
    <string name="ollama_url_key">ollama_url</string>
    <string name="username_key">username</string>
    <string name="settings_key">settings</string>
    <string name="model_key">model</string>

    <string name="label_interence_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_confidence_threshold">Threshold</string>
    <string name="label_max_results">Max Results</string>
    <string name="label_threads">Number of Threads</string>
    <string name="label_delegate">Delegate</string>
    <string name="label_models">ML Model</string>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>

    <string-array name="models_spinner_titles">
        <item>MobileNet V1</item>
        <item>EfficientDet Lite0</item>
        <item>EfficientDet Lite1</item>
        <item>EfficientDet Lite2</item>
        <item>MODEL YOLOV4 416</item>
        <item>MODEL YOLOV4 P1</item>
        <item>MODEL YOLOV4 P2</item>
    </string-array>
</resources>
